feat(M2): Events and Parties initial implementation
